02_Infrastructure_as_Code/Terraform/AWS_Terraform/S3andEC2.tf
provider "aws" {
    region = "us-east-1"
}

resource "aws_s3_bucket" "testbucket"{
  bucket = "terraformexample"
  acl = "private"

  tags = {
    Name = "MyS3Bucket"
  }
}

resource "aws_instance" "example"{
    ami = "ami-0182f373e66f89c85"
    instance_type = "t2.micro"

    tags = {
      Name = "TerraformTest"
    }
}
